Added Islam important texts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                               <li><strong>Day of Judgement: </strong> On the day you die, God determines your morals and faith, then determines your destiny (Heaven/Hell)</li>
                               <li>Nothing happens without God's knowledge of it. (God is always with you)</li>
                           </ul>
+                          <h4>Important Texts</h4>
+                          <ul>
+                              <li>The <strong>Qua'rn</strong> is the holy text of Islam</li>
+                              <li>Qua'rn was revealed to prophet Muhammad over a span of 23 years</li>
+                              <li>114 chapters were written in an Arabic dialect</li>
+                              <li>6 <strong>Prophets</strong> of God: Adam, Noah, Abraham, Moses, Jesus, and Muhammad</li>
+                              <li>Regarded to be the sacred words of God, and a corrected version of the old and new testament</li>
+                              <li>Nothing happens without God's knowledge of it. (God is always with you)</li>
+                          </ul>
                       </div>
                   </div>
               </div>
