Added Islam major branches

--- a/index.html
+++ b/index.html
@@ -44,12 +44,55 @@
                           </ul>
                           <h4>Important Texts</h4>
                           <ul>
-                              <li>The <strong>Qua'rn</strong> is the holy text of Islam</li>
-                              <li>Qua'rn was revealed to prophet Muhammad over a span of 23 years</li>
+                              <li>The <strong>Quran</strong> is the holy text of Islam</li>
+                              <li>Quran was revealed to prophet Muhammad over a span of 23 years</li>
                               <li>114 chapters were written in an Arabic dialect</li>
                               <li>6 <strong>Prophets</strong> of God: Adam, Noah, Abraham, Moses, Jesus, and Muhammad</li>
                               <li>Regarded to be the sacred words of God, and a corrected version of the old and new testament</li>
                               <li>Nothing happens without God's knowledge of it. (God is always with you)</li>
+                          </ul>
+                          <h4>Important People</h4>
+                          <ul>
+                              <li><strong>Prophets:</strong> Abraham, Moses, Muhammad</li>
+                              <li>
+                                  Abraham
+                                  <ul>
+                                      <li>Called <strong>Ibrahim</strong></li>
+                                      <li>Had trouble understanding the concept of God</li>
+                                      <li>Abraham was a <strong>Hernif</strong> (NOT Jewish or Christian)</li>
+                                      <li>No relationship with God, but was given the ability to choose prophets by God</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Moses
+                                  <ul>
+                                      <li>Called <strong>Musa/Moshe Kabbenu</strong> (Moses our teacher)</li>
+                                      <li>God told his mother to put him in a box, foating across the nile river, and told her that he would keep baby Moses safe</li>
+                                      <li>He was found floating down the river by a Pharoh, who raised him</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Muhammed
+                                  <ul>
+                                      <li>Born in <strong>Mecca</strong></li>
+                                      <li>The final prophet</li>
+                                      <li>Was told the Quran by an angel named <strong>Jibreel</strong>, who recited God's words</li>
+                                  </ul>
+                              </li>
+                          </ul>
+                          <h4>Major Branches</h4>
+                          <ul>
+                              <li>Two major branches: <strong>Sunni</strong> and <strong>Shia</strong></li>
+                              <li>Most differences are derived from historical experiences or sociopolitical developments</li>
+                              <li>
+                                  Sunni believes <strong>Abu-Bakr</strong> to be the successor to Muhammad
+                                  <ul>
+                                      <li>Abu-Bakr was a political leader at the time</li>
+                                  </ul>
+                              </li>
+                              <li>Shia believes <strong>Ali</strong> to be the successor to Muhammad</li>
+                              <li>The conflict of Muhammad's successor split Islam into two groups in the first place</li>
+
                           </ul>
                       </div>
                   </div>
