Removed javascript because I probably won't need to use it

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <link rel="stylesheet" href="inc/base.min.css" media="screen">
         <link rel="stylesheet" href="inc/extra.css">
-        <script src="inc/jquery.min.js"></script>
-        <script src="inc/base.min.js"></script>
     </head>
   <body>
       <div class="container">
           <div class="page-header">
+              <h4 style="float: right">Michael V</h4>
+
               <h1>World Religions <small>Unit 5 Project</small></h1>
           </div>
           <div class="row">
