Added Judaism early history

--- a/index.html
+++ b/index.html
@@ -104,6 +104,15 @@
                               Judaism
                           </h3>
                       </div>
+                      <div style="padding: 8px">
+                          <h4>Early History</h4>
+                          <ul>
+                              <li>Began around <strong>2000 B.C. in Canaan</strong></li>
+                              <li>Judaism is taight from the Hebrew bible, called the <strong>Torah</strong></li>
+                              <li>3 main founders (mentioned below), known as the <strong>Patriarchs</strong></li>
+                              <li><strong>Abraham</strong> was the first person to spread the beliefs of Judaism</li>
+                          </ul>
+                      </div>
                   </div>
               </div>
               <div class="col-md-4" id="religion-christianity">
