--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
                               <li>3 main founders (mentioned below), known as the <strong>Patriarchs</strong></li>
                               <li><strong>Abraham</strong> was the first person to spread the beliefs of Judaism</li>
                           </ul>
+                          <h4>Core Beliefs</h4>
+                          <ul>
+                              <li>Judaism is <strong>Monotheistic</strong>, only worshipping one God</li>
+                              <li>Believed that god is <strong>transdecent</strong>, above physical human experience</li>
+                              <li>Believed that god has no physical body, and that he created the universe alone</li>
+                              <li>God is believed to be <strong>omnipresent</strong> and <strong>omnipotent</strong></li>
+                          </ul>
                       </div>
                   </div>
               </div>
