Added Judaism important texts

--- a/index.html
+++ b/index.html
@@ -116,8 +116,15 @@
                           <ul>
                               <li>Judaism is <strong>Monotheistic</strong>, only worshipping one God</li>
                               <li>Believed that god is <strong>transdecent</strong>, above physical human experience</li>
-                              <li>Believed that god has no physical body, and that he created the universe alone</li>
+                              <li>Believed that god has <strong>no physical body</strong>, and that he created the universe alone</li>
                               <li>God is believed to be <strong>omnipresent</strong> and <strong>omnipotent</strong></li>
+                          </ul>
+                          <h4>Important Texts</h4>
+                          <ul>
+                              <li>The sacred text of Judaism is the <strong>Torah</strong>, which is also the old testament of the bible</li>
+                              <li>The Torah has 5 books: Exodus, <strong>Genesis, Leviticus, Numbers, and Devarim</strong></li>
+                              <li>It is believed that God told Moses the entire text of the Torah</li>
+                              <li>There are <strong>613 commandments</strong> in the Torah, but <strong>only the most important ten are usually referenced</strong></li>
                           </ul>
                       </div>
                   </div>
