Added Judaism important people

--- a/index.html
+++ b/index.html
@@ -126,6 +126,31 @@
                               <li>It is believed that God told Moses the entire text of the Torah</li>
                               <li>There are <strong>613 commandments</strong> in the Torah, but <strong>only the most important ten are usually referenced</strong></li>
                           </ul>
+                          <h4>Important People</h4>
+                          <ul>
+                              <li><strong>Prophets:</strong> Abraham, Moses, Joshua</li>
+                              <li>
+                                  Abraham
+                                  <ul>
+                                      <li>The first prophet</li>
+                                      <li>Abraham was <strong>tasked with spreading God's word</strong></li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Moses
+                                  <ul>
+                                      <li>God has spoken with Abraham</li>
+                                      <li>After God told Abraham all 613 commandments that are in the Torah today</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Joshua
+                                  <ul>
+                                      <li>One of Moses' successors</li>
+                                      <li>Joshua is the bible's most famous warrior</li>
+                                  </ul>
+                              </li>
+                          </ul>
                       </div>
                   </div>
               </div>
