Added Judaism major branches

--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
                                   </ul>
                               </li>
                           </ul>
+                          <h4>Major Branches</h4>
+                          <ul>
+                              <li>There are actually <strong>seven branches</strong> in Judaism</li>
+                              <li><strong>Reform Judaism</strong>: A modernized form of Judaism with more open ideas</li>
+                              <li><strong>Orthodox Judaism</strong>: The most traditional form of judaism. Most orthodox Jews believe Jewish law is essential</li>
+                              <li><strong>Conservative Judaism</strong>: A more traditional form of Judaism that combines both reform and orthodox</li>
+                          </ul>
                       </div>
                   </div>
               </div>
