--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
                               <li><strong>Orthodox Judaism</strong>: The most traditional form of judaism. Most orthodox Jews believe Jewish law is essential</li>
                               <li><strong>Conservative Judaism</strong>: A more traditional form of Judaism that combines both reform and orthodox</li>
                           </ul>
+                          <h4>Worship</h4>
+                          <ul>
+                              <li>Jews worship in a <strong>synagogue</strong>, usually in weekly services</li>
+                              <li>A Rabbi, Cantor, or a member of congregation usually runs the services</li>
+                              <li>In orthodox services, men and women sit apart, while they sit together in reform services</li>
+                              <li>Every synagogue contains an arc, where sacred texts are stored</li>
+                          </ul>
                       </div>
                   </div>
               </div>
