Added Judaism holidays

--- a/index.html
+++ b/index.html
@@ -165,6 +165,24 @@
                               <li>In orthodox services, men and women sit apart, while they sit together in reform services</li>
                               <li>Every synagogue contains an arc, where sacred texts are stored</li>
                           </ul>
+                          <h4>Holidays</h4>
+                          <ul>
+                              <li>
+                                  <strong>Hanukkah</strong>
+                                  <ul>
+                                      <li>Hanukkah is the celebration of the end of war</li>
+                                      <li>Lasts eight days</li>
+                                      <li><strong>Menorah</strong>: Candleabrum with nine candles, eight of which represent a day of Hankkah</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  <strong>Passover</strong>
+                                  <ul>
+                                      <li>Celebrates the <strong>Exodus</strong>, the freedom of slavery from ancient Egypt</li>
+                                      <li>The Exodus followed the Ten Plagues</li>
+                                  </ul>
+                              </li>
+                          </ul>
                       </div>
                   </div>
               </div>
