Added Islam holy places

--- a/index.html
+++ b/index.html
@@ -94,6 +94,14 @@
                               <li>The conflict of Muhammad's successor split Islam into two groups in the first place</li>
 
                           </ul>
+                          <h4>Holy Places</h4>
+                          <ul>
+                              <li>The Islam place of worship is called a <strong>Mosque</strong></li>
+                              <li>The first Mosque was Muhammad's home in Medine</li>
+                              <li>A simple Mosque consists of a prayer room with a wall facing towards Mecca marked with a <strong>mihrab</strong></li>
+                              <li>Mecca is the birthplace of Muhammad</li>
+                              <li>A ritual is performed by Muslims weekly called <strong>Wudu</strong>, to maintain good spiritial and physical hygene</li>
+                          </ul>
                       </div>
                   </div>
               </div>
