Added Islam holidays

--- a/index.html
+++ b/index.html
@@ -102,6 +102,24 @@
                               <li>Mecca is the birthplace of Muhammad</li>
                               <li>A ritual is performed by Muslims weekly called <strong>Wudu</strong>, to maintain good spiritial and physical hygene</li>
                           </ul>
+                          <h4>Holidays</h4>
+                          <ul>
+                              <li>There are two main Islamic holidays</li>
+                              <li>
+                                  Eid ul Fitr
+                                  <ul>
+                                      <li>First celebrated by Muhammad after victory of the battle of Jang-e-Badar</li>
+                                      <li>Celebrates the end of fasting, a self control practice</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Eid ul Adna
+                                  <ul>
+                                      <li>A 4 day public holiday</li>
+                                      <li>Comemmorates Ibrahim's willingness to sacrifice his son when ordered by God</li>
+                                  </ul>
+                              </li>
+                          </ul>
                       </div>
                   </div>
               </div>
