Added Islam interesting facts

--- a/index.html
+++ b/index.html
@@ -120,6 +120,21 @@
                                   </ul>
                               </li>
                           </ul>
+                          <h4>Interesting Facts</h4>
+                          <ul>
+                              <li>
+                                  Muslims follow a set of rules called <strong>The Five Pillars:</strong>
+                                  <ul>
+                                      <li>Belief</li>
+                                      <li>Worship</li>
+                                      <li>Fasting</li>
+                                      <li>Almsgiving</li>
+                                      <li>Pilgrimage</li>
+                                  </ul>
+                              </li>
+                              <li>Islamic art is usually very vibrant</li>
+                              <li>It is believed that all art in Islam may only be for religious purposes, but includes artistic traditions in culture</li>
+                          </ul>
                       </div>
                   </div>
               </div>
