Added images for all three religions

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
                           </h3>
                       </div>
                       <div style="padding: 8px">
+                          <div style="height: 200px">
+                              <img src="inc/img/islam.jpg" alt="Image Missing" class="img-thumbnail img-responsive">
+                          </div>
+                          <hr />
+
                           <h4>Early History</h4>
                           <ul>
                               <li>Began with prophet named <strong>Muhammad</strong></li>
@@ -146,6 +151,12 @@
                           </h3>
                       </div>
                       <div style="padding: 8px">
+                          <div style="height: 200px">
+                              <img src="inc/img/judaism.png" alt="Image Missing" class="img-thumbnail img-responsive">
+                          </div>
+                          <hr />
+
+
                           <h4>Early History</h4>
                           <ul>
                               <li>Began around <strong>2000 B.C. in Canaan</strong></li>
@@ -233,6 +244,12 @@
                           <h3 class="panel-title">
                               Christianity
                           </h3>
+                      </div>
+                      <div style="padding: 8px">
+                          <div style="height: 200px">
+                              <img src="inc/img/islam.jpg" alt="Image Missing" class="img-thumbnail img-responsive">
+                          </div>
+                          <hr />
                       </div>
                   </div>
               </div>
