Fixed some spelling mistakes

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                           <h4>Early History</h4>
                           <ul>
                               <li>Began around <strong>2000 B.C. in Canaan</strong></li>
-                              <li>Judaism is taight from the Hebrew bible, called the <strong>Torah</strong></li>
+                              <li>Judaism is taught from the <strong>Torah</strong></li>
                               <li>3 main founders (mentioned below), known as the <strong>Patriarchs</strong></li>
                               <li><strong>Abraham</strong> was the first person to spread the beliefs of Judaism</li>
                           </ul>
@@ -235,6 +235,12 @@
                                   </ul>
                               </li>
                           </ul>
+                          <h4>Interesting Facts</h4>
+                          <ul>
+                              <li>Jewish laws are known as Halakhah</li>
+                              <li>The Hebrew Bible is called the Tanakna</li>
+                              <li>There are four new years in Judaism</li>
+                          </ul>
                       </div>
                   </div>
               </div>
@@ -247,7 +253,7 @@
                       </div>
                       <div style="padding: 8px">
                           <div style="height: 200px">
-                              <img src="inc/img/islam.jpg" alt="Image Missing" class="img-thumbnail img-responsive">
+                              <img src="inc/img/christianity.jpg" alt="Image Missing" class="img-thumbnail img-responsive">
                           </div>
                           <hr />
                       </div>
