Added Christianity early history

--- a/index.html
+++ b/index.html
@@ -256,6 +256,14 @@
                               <img src="inc/img/christianity.jpg" alt="Image Missing" class="img-thumbnail img-responsive">
                           </div>
                           <hr />
+                          <h4>Early History</h4>
+                          <ul>
+                              <li>History of Christianity is centered around the life, death, and resurrection of Jesus Christ</li>
+                              <li>Jesus was <strong>born in a stable in Bethlehem</strong> to a young virgin</li>
+                              <li>Jesus had <strong>twelve disciples</strong> to help him in his works</li>
+                              <li>After being charged with <strong>heresy, Jesus was crucified</strong></li>
+                              <li>On the Sunday following his death, Jesus rose from the dead by the powers of God</li>
+                          </ul>
                       </div>
                   </div>
               </div>
