Added Christianity core beliefs

--- a/index.html
+++ b/index.html
@@ -264,6 +264,14 @@
                               <li>After being charged with <strong>heresy, Jesus was crucified</strong></li>
                               <li>On the Sunday following his death, Jesus rose from the dead by the powers of God</li>
                           </ul>
+                          <h4>Core Beliefs</h4>
+                          <ul>
+                              <li>Jesus is known to be the <strong>son of god</strong></li>
+                              <li>Jesus said he had come to fulfill God's law, not teach it</li>
+                              <li>Jesus had <strong>twelve disciples</strong> to help him in his works</li>
+                              <li>Christians believe in life after death</li>
+                              <li>Saints are christians who live a holy life</li>
+                          </ul>
                       </div>
                   </div>
               </div>
