Added Christianity important texts

--- a/index.html
+++ b/index.html
@@ -272,6 +272,33 @@
                               <li>Christians believe in life after death</li>
                               <li>Saints are christians who live a holy life</li>
                           </ul>
+                          <h4>Important Texts</h4>
+                          <ul>
+                              <li>
+                                  The Holy Bible
+                                  <ul>
+                                      <li><strong>Has 2 sections</strong>, the old and new testament</li>
+                                      <li>The old testament contains 5 chapters</li>
+                                      <li>The new testament has 27 books and 2 sections (gospels and letters)</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Revalation
+                                  <ul>
+                                      <li>The last book in the bible</li>
+                                      <li>Well known to contain very vivid imagery of suffering</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Didache
+                                  <ul>
+                                      <li>Possibly the first Christian document</li>
+                                      <li>Some of the first Christians debrated whether a person had to be Jewish to convert to Christianity</li>
+                                      <li>Written before the new testament</li>
+                                  </ul>
+                              </li>
+
+                          </ul>
                       </div>
                   </div>
               </div>
