Added Christianity important people

--- a/index.html
+++ b/index.html
@@ -299,6 +299,30 @@
                               </li>
 
                           </ul>
+                          <h4>Important People</h4>
+                          <ul>
+                              <li>
+                                  Charles Wesley
+                                  <ul>
+                                      <li>One of the founding fathers of the Methodist branch of Christianity</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Pope
+                                  <ul>
+                                      <li>The Pope is important to Cathlics</li>
+                                      <li>Believed by Catholics to be the successor to St. Peter</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Saint Andrew
+                                  <ul>
+                                      <li>Saint of Scotland, Russia, and Greece</li>
+                                      <li>Jesus' first diciple</li>
+                                  </ul>
+                              </li>
+
+                          </ul>
                       </div>
                   </div>
               </div>
