Added Christianity major branches

--- a/index.html
+++ b/index.html
@@ -323,6 +323,40 @@
                               </li>
 
                           </ul>
+                          <h4>Major Branches</h4>
+                          <ul>
+                              <li>
+                                  Roman Catholic
+                                  <ul>
+                                      <li>Oldest form of Christianity</li>
+                                      <li>Over 1 billion Catholics</li>
+                                      <li>Pope believed to be successor to St. Peter</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Seventh-Day Adventists
+                                  <ul>
+                                      <li>Founded in the USA in the 1860</li>
+                                      <li>Known by most as Mormons</li>
+                                      <li>Strict ethic code and very conservative lifestyle</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Baptist
+                                  <ul>
+                                      <li>5th largest branch</li>
+                                      <li>
+                                          3 core beliefs
+                                            <ul>
+                                                <li>Bible was a guide for all matters</li>
+                                                <li>Church should contain only believers</li>
+                                                <li>Church should not be governed by a heirarchy, instead by leaders</li>
+                                            </ul>
+                                      </li>
+                                  </ul>
+                              </li>
+
+                          </ul>
                       </div>
                   </div>
               </div>
