Added Christianity holy places

--- a/index.html
+++ b/index.html
@@ -357,6 +357,13 @@
                               </li>
 
                           </ul>
+                          <h4>Holy Places / Worship</h4>
+                          <ul>
+                              <li>The Lord's Prayer: tells us we stand in vulnerability</li>
+                              <li>Church is the place of worship for Christians</li>
+                              <li>Servies are run by preachers and pastors</li>
+                              <li>Most services take place on Sunday</li>
+                          </ul>
                       </div>
                   </div>
               </div>
