Added Christianity holidays

--- a/index.html
+++ b/index.html
@@ -364,6 +364,26 @@
                               <li>Servies are run by preachers and pastors</li>
                               <li>Most services take place on Sunday</li>
                           </ul>
+                          <h4>Holidays</h4>
+                          <ul>
+                              <li>
+                                  Christmas
+                                  <ul>
+                                      <li>December 25th</li>
+                                      <li>Marks the birth of Jesus</li>
+                                      <li>Celebrated with gifts from Santa Claus</li>
+                                  </ul>
+                              </li>
+                              <li>
+                                  Easter
+                                  <ul>
+                                      <li>Easter sunday is culmination of the holy week</li>
+                                      <li>Day of the resurrection of Jesus Christ</li>
+                                      <li>Also celebrated with gifts from a creepy rabbit</li>
+                                  </ul>
+                              </li>
+
+                          </ul>
                       </div>
                   </div>
               </div>
