Added Christianity interesting facts

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   <body>
       <div class="container">
           <div class="page-header">
-              <h4 style="float: right">Michael V</h4>
+              <a href="abstracts"><h4 style="float: right">Abstracts</h4></a>
 
-              <h1>World Religions <small>Unit 5 Project</small></h1>
+              <h1>World Religions <small>Unit 5 Project &nbsp; - &nbsp; By Michael V</small></h1>
           </div>
           <div class="row">
               <div class="col-md-4" id="religion-islam">
@@ -383,6 +383,12 @@
                                   </ul>
                               </li>
 
+                          </ul>
+                          <h4>Interesting Facts</h4>
+                          <ul>
+                              <li>Christianity is the world's largest religion, with over 2 billion followers</li>
+                              <li>Jesus never realized that he would create a new religion, just reformed Judaism</li>
+                              <li>Christianity spread to Europe, Mesopotamia, and Asia by the fourth century, even becoming the official church of the Roman Empire</li>
                           </ul>
                       </div>
                   </div>
